baml_language/crates/baml_tests/snapshots/compiles/optional_function_parameters/baml_tests__compiles__optional_function_parameters__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.SearchService {
  base: string
}
class user.SearchService$stream {
  base: string | null
}
type user.NarrowSearcher = (query: string, filter?: string?) -> string[] throws never
type user.NarrowSearcher$stream = unknown
type user.Searcher = (query: string, max_results?: int) -> int throws never
type user.Searcher$stream = unknown
function user.AskDocs(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> string  [llm] {
  ai.internal._run_agent_to_response(AskDocs$task(query = query, max_results = max_results, filter = filter, client = client)).value
}
function user.AskDocs$build_request(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> baml.http.Request  [expr] {
  baml.llm.build_request(client, "AskDocs", map { "query": query, "max_results": max_results, "filter": filter })
}
function user.AskDocs$build_request_stream(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> baml.http.Request  [expr] {
  baml.llm.build_request_stream(client, "AskDocs", map { "query": query, "max_results": max_results, "filter": filter })
}
function user.AskDocs$parse(json: string, client: baml.llm.Client = TestClient) -> string  [expr] {
  baml.llm.parse(json)
}
function user.AskDocs$parse_stream(sse: baml.http.SseStream, client: baml.llm.Client = TestClient) -> baml.llm.Stream<string | null, string>  [expr] {
  client.__make_stream(sse)
}
function user.AskDocs$render_prompt(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt(client, "AskDocs", map { "query": query, "max_results": max_results, "filter": filter })
}
function user.AskDocs$stream(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> baml.llm.Stream<string | null, string>  [expr] {
  baml.llm.stream_llm_function(client, "AskDocs", map { "query": query, "max_results": max_results, "filter": filter })
}
function user.AskDocs$task(query: string, max_results: int = 10, filter: string = DefaultFilter(), client: baml.llm.Client = TestClient) -> ai.Task<string>  [expr] {
  ai.internal._task_named_from_registered_prompt(ai.internal._provider_from_client(client), "AskDocs", map { "query": query, "max_results": max_results, "filter": filter }, [])
}
function user.DefaultFilter() -> string  [expr] {
  {  } "none"
}
function user.Docs(self: ?, query: string, filter: string? = null) -> string[]  [expr] {
  {  } SearchDocs(query, filter = filter)
}
function user.HostEntry(query: string, max_results: int = 10, filter: string? = null) -> int  [expr] {
  {  } if (filter Eq null) {  } max_results else {  } max_results Add 100
}
function user.Run(self: ?, query: string, limit: int = 20) -> int  [expr] {
  {  } Search(query = query, max_results = limit, filter = self.base)
}
function user.Search(query: string, max_results: int = 10, filter: string = "none") -> int  [expr] {
  {  } max_results
}
function user.SearchDocs(query: string, max_results: int = 10, filter: string? = null, chunk_size: int = query.length()) -> string[]  [expr] {
  {  } [query]
}
function user.TestClient$new(lenient: bool) -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "TestClient", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: null, base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, media_url_handler: null, headers: map {  }, query_params: map {  }, request_body: map {  } } }
}
function user.UseMixedArgs() -> int  [expr] {
  {  } Search("dogs", max_results = 3, filter = "all")
}
function user.UseNamedDefaults() -> int  [expr] {
  {  } Search(query = "cats", max_results = 5, filter = "recent")
}
function user.UseOptionalDropping() -> string[]  [expr] {
  { let narrowed: user.NarrowSearcher = SearchDocs } narrowed("cats", filter = "recent")
}
function user.UseRequiredByName() -> string[]  [expr] {
  {  } SearchDocs(query = "birds")
}
