baml_language/crates/baml_tests/snapshots/compiles/optional_function_parameters/baml_tests__compiles__optional_function_parameters__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.AskDocs(query: string, max_results: int, filter: string, client: baml.llm.Client) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: baml.llm.Client // client // param
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: map<string, unknown>
    let _9: type

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = call const fn user.DefaultFilter() -> [bb4];
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = const fn user.TestClient;
        goto -> bb6;
    }

    bb6: {
        _8 = { const "query": copy _1, const "max_results": copy _2, const "filter": copy _3 };
        _9 = load_type(string);
        _0 = call const fn baml.llm.call_llm_function<copy _9>(copy _4, const "AskDocs", copy _8, const <omitted>) -> [bb7];
    }

    bb7: {
        return;
    }
}

fn user.AskDocs$build_request(query: string, max_results: int, filter: string, client: baml.llm.Client) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: baml.llm.Client // client // param
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: map<string, unknown>

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = call const fn user.DefaultFilter() -> [bb4];
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = const fn user.TestClient;
        goto -> bb6;
    }

    bb6: {
        _8 = { const "query": copy _1, const "max_results": copy _2, const "filter": copy _3 };
        _0 = call const fn baml.llm.build_request(copy _4, const "AskDocs", copy _8) -> [bb7];
    }

    bb7: {
        return;
    }
}

fn user.AskDocs$build_request_stream(query: string, max_results: int, filter: string, client: baml.llm.Client) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: baml.llm.Client // client // param
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: map<string, unknown>

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = call const fn user.DefaultFilter() -> [bb4];
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = const fn user.TestClient;
        goto -> bb6;
    }

    bb6: {
        _8 = { const "query": copy _1, const "max_results": copy _2, const "filter": copy _3 };
        _0 = call const fn baml.llm.build_request_stream(copy _4, const "AskDocs", copy _8) -> [bb7];
    }

    bb7: {
        return;
    }
}

fn user.AskDocs$render_prompt(query: string, max_results: int, filter: string, client: baml.llm.Client) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: baml.llm.Client // client // param
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: map<string, unknown>

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = call const fn user.DefaultFilter() -> [bb4];
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = const fn user.TestClient;
        goto -> bb6;
    }

    bb6: {
        _8 = { const "query": copy _1, const "max_results": copy _2, const "filter": copy _3 };
        _0 = call const fn baml.llm.render_prompt(copy _4, const "AskDocs", copy _8) -> [bb7];
    }

    bb7: {
        return;
    }
}

fn user.DefaultFilter() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "none";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.SearchService.Docs(self: SearchService, query: string, filter: string | null) -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: SearchService // self // param
    let _2: string // query // param
    let _3: string | null // filter // param
    let _4: bool

    bb0: {
        _4 = copy _3 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _3 = const null;
        goto -> bb2;
    }

    bb2: {
        _0 = call const fn user.SearchDocs(copy _2, const <omitted>, copy _3, const <omitted>) -> [bb3];
    }

    bb3: {
        return;
    }
}

fn user.HostEntry(query: string, max_results: int, filter: string | null) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string | null // filter // param
    let _4: bool
    let _5: bool
    let _6: bool

    bb0: {
        _4 = copy _2 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _3 == const <omitted>;
        branch copy _5 -> [bb3, bb4];
    }

    bb3: {
        _3 = const null;
        goto -> bb4;
    }

    bb4: {
        _6 = call const fn baml.ops.equals_equals(copy _3, const null) -> [bb5];
    }

    bb5: {
        branch copy _6 -> [bb7, bb6];
    }

    bb6: {
        _0 = copy _2 + const 100_i64;
        goto -> bb8;
    }

    bb7: {
        _0 = copy _2;
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn user.SearchService.Run(self: SearchService, query: string, limit: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: SearchService // self // param
    let _2: string // query // param
    let _3: int // limit // param
    let _4: bool
    let _5: string

    bb0: {
        _4 = copy _3 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _3 = const 20_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _1.0;
        _0 = call const fn user.Search(copy _2, copy _3, copy _5) -> [bb3];
    }

    bb3: {
        return;
    }
}

fn user.Search(query: string, max_results: int, filter: string) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: bool
    let _5: bool

    bb0: {
        _4 = copy _2 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _3 == const <omitted>;
        branch copy _5 -> [bb3, bb4];
    }

    bb3: {
        _3 = const "none";
        goto -> bb4;
    }

    bb4: {
        _0 = copy _2;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.SearchDocs(query: string, max_results: int, filter: string | null, chunk_size: int) -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string | null // filter // param
    let _4: int // chunk_size // param
    let _5: bool
    let _6: bool
    let _7: bool

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = const null;
        goto -> bb4;
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = call const fn baml.String.length(copy _1) -> [bb6];
    }

    bb6: {
        _0 = [copy _1];
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.TestClient$new() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: baml.llm.PrimitiveClientOptions
    let _2: map<string, string>
    let _3: map<string, string>
    let _4: map<string, unknown>

    bb0: {
        _2 = {  };
        _3 = {  };
        _4 = {  };
        _1 = baml.llm.PrimitiveClientOptions { const null, const null, const null, const null, const null, const null, const null, const null, const null, const null, const null, const null, copy _2, copy _3, copy _4 };
        _0 = baml.llm.PrimitiveClient { const "TestClient", const "openai", copy _1 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.UseMixedArgs() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn user.Search(const "dogs", const 3_i64, const "all") -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.UseNamedDefaults() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn user.Search(const "cats", const 5_i64, const "recent") -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.UseOptionalDropping() -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: (string, string | null) -> string[] throws never // narrowed
    let _2: (string, int, string | null, int) -> string[] throws never [captured]
    let _3: (string, string | null) -> string[] throws never

    bb0: {
        _2 = const fn user.SearchDocs;
        _1 = make_closure lambda[0](copy _2);
        _3 = copy _1;
        _0 = call copy _3(const "cats", const "recent") -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<optional-adapter(UseOptionalDropping, 0)>(query: string, filter: string | null) -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: string // query // param
    let _2: string | null // filter // param

    bb0: {
        _0 = call copy capture[0](copy _1, const <omitted>, copy _2, const <omitted>) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.UseRequiredByName() -> string[] {
    // Locals:
    let _0: string[] // _0 // return

    bb0: {
        _0 = call const fn user.SearchDocs(const "birds", const <omitted>, const <omitted>, const <omitted>) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.SearchService.from_json(j: baml.json.json) -> SearchService {
    // Locals:
    let _0: SearchService // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: baml.json.json
    let _4: type

    bb0: {
        _3 = call const fn baml.json.field(copy _1, const "base") -> [bb1];
    }

    bb1: {
        _4 = load_type(string);
        _2 = call const fn baml.json.from_json<copy _4>(copy _3) -> [bb2];
    }

    bb2: {
        _0 = user.SearchService { copy _2 };
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.SearchService.to_json(self: SearchService) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: SearchService // self // param
    let _2: baml.json.json
    let _3: string
    let _4: SearchService
    let _5: type

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _5 = load_type(string);
        _2 = call const fn baml.json.to_json<copy _5>(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "base": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.SearchService.to_string(self: SearchService) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: SearchService // self // param
    let _2: type

    bb0: {
        _2 = load_type(SearchService);
        _0 = call const fn baml.unstable.string<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}
