baml_language/crates/baml_tests/snapshots/compiles/optional_function_parameters/baml_tests__compiles__optional_function_parameters__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.Searcher = (query: string, max_results?: int) -> int throws never
type user.NarrowSearcher = (query: string, filter?: string | null) -> string[] throws never
function user.DefaultFilter() -> string throws never {
  { : "none"
    "none" : "none"
  }
}
function user.Search(query: string, max_results: int = 10, filter: string = "none") -> int throws never {
  { : int
    max_results : int
  }
}
function user.SearchDocs(query: string, max_results: int = 10, filter: string | null = null, chunk_size: int = query.length()) -> string[] throws never {
  { : string[]
    [query] : string[]
  }
}
function user.UseNamedDefaults() -> int throws never {
  { : int
    Search(query = "cats", max_results = 5, filter = "recent") : int
  }
}
function user.UseMixedArgs() -> int throws never {
  { : int
    Search("dogs", max_results = 3, filter = "all") : int
  }
}
function user.UseRequiredByName() -> string[] throws never {
  { : string[]
    SearchDocs(query = "birds") : string[]
  }
}
function user.UseOptionalDropping() -> string[] throws never {
  { : string[]
    let narrowed: NarrowSearcher = SearchDocs : (query: string, max_results?: int, filter?: string | null, chunk_size?: int) -> string[] throws never -> (query: string, filter?: string | null) -> string[] throws never
    narrowed("cats", filter = "recent") : string[]
  }
}
function user.HostEntry(query: string, max_results: int = 10, filter: string | null = null) -> int throws never {
  { : int
    if (filter == null : bool) : int
      { : int
        max_results : int
      }
    else
      { : int
        max_results + 100 : int
      }
  }
}
function user.AskDocs(query: string, max_results: int, filter: string, client: ai.Client | null = null) -> string throws never {
  ai.Agent.new<string>(client = client).run(AskDocs$spec(query, max_results, filter)).value : string
}
function user.AskDocs$spec(query: string, max_results: int, filter: string) -> ai.FunctionSpec<string> throws never {
  ai.FunctionSpec { spec_name: "AskDocs", args: map { "query": query, "max_results": max_results, "filter": filter }, prompt_template: ai.Prompt { template: ( __spec_output_format: string) -> { ... } }, toolbox: ai.Toolbox.new([]), default_client: TestClient } : ai.FunctionSpec<string>
}
lambda user.AskDocs$spec {
}
function user.AskDocs$render_prompt(query: string, max_results: int, filter: string) -> string throws never {
  AskDocs$spec(query, max_results, filter).prompt().render_text(ai.render_output_format(reflect.type_of<string>())) : string
}
function user.AskDocs$parse(json: string) -> string throws never {
  baml.sap.parse<T>(json) : string
}
class user.SearchService {
  base: string
}
function user.SearchService.Run(self: user.SearchService, query: string, limit: int = 20) -> int throws never {
  { : int
    Search(query = query, max_results = limit, filter = self.base) : int
  }
}
function user.SearchService.Docs(self: user.SearchService, query: string, filter: string | null = null) -> string[] throws never {
  { : string[]
    SearchDocs(query, filter = filter) : string[]
  }
}
type user.Searcher$stream = unknown
type user.NarrowSearcher$stream = unknown
function user.AskDocs$stream(query: string, max_results: int, filter: string, client: ai.StreamingClient | null = null) -> ai.Stream<string | null, string> throws never {
  ai.stream_spec(AskDocs$spec(query, max_results, filter), client = client) : ai.Stream<string | null, string>
}
class user.SearchService$stream {
  base: string | null
}
