baml_language/crates/baml_tests/snapshots/compiles/optional_function_parameters/baml_tests__compiles__optional_function_parameters__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.TestClient
    load_const null
    return
}

function user.AskDocs(query: string, max_results: int, filter: string) -> string {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    call user.DefaultFilter
    store_var filter

  L1:
    load_type string
    load_global user.TestClient
    load_const "AskDocs"
    load_var query
    load_var max_results
    load_var filter
    load_const "query"
    load_const "max_results"
    load_const "filter"
    alloc_map 3
    call baml.llm.call_llm_function
    return
}

function user.AskDocs$build_request(query: string, max_results: int, filter: string) -> baml.http.Request {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    call user.DefaultFilter
    store_var filter

  L1:
    load_global user.TestClient
    load_const "AskDocs"
    load_var query
    load_var max_results
    load_var filter
    load_const "query"
    load_const "max_results"
    load_const "filter"
    alloc_map 3
    call baml.llm.build_request
    return
}

function user.AskDocs$build_request_stream(query: string, max_results: int, filter: string) -> baml.http.Request {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    call user.DefaultFilter
    store_var filter

  L1:
    load_global user.TestClient
    load_const "AskDocs"
    load_var query
    load_var max_results
    load_var filter
    load_const "query"
    load_const "max_results"
    load_const "filter"
    alloc_map 3
    call baml.llm.build_request_stream
    return
}

function user.AskDocs$parse(json: string) -> string {
    load_const "AskDocs"
    load_var json
    call baml.llm.parse
    return
}

function user.AskDocs$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream<string, null | string> {
    load_var sse
    load_const "AskDocs"
    load_const null
    call_indirect
    return
}

function user.AskDocs$render_prompt(query: string, max_results: int, filter: string) -> baml.llm.PromptAst {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    call user.DefaultFilter
    store_var filter

  L1:
    load_global user.TestClient
    load_const "AskDocs"
    load_var query
    load_var max_results
    load_var filter
    load_const "query"
    load_const "max_results"
    load_const "filter"
    alloc_map 3
    call baml.llm.render_prompt
    return
}

function user.AskDocs$stream(query: string, max_results: int, filter: string) -> baml.llm.Stream<string, null | string> {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    call user.DefaultFilter
    store_var filter

  L1:
    load_global user.TestClient
    load_const "AskDocs"
    load_var query
    load_var max_results
    load_var filter
    load_const "query"
    load_const "max_results"
    load_const "filter"
    alloc_map 3
    call baml.llm.stream_llm_function
    return
}

function user.DefaultFilter() -> string {
    load_const "none"
    return
}

function user.HostEntry(query: string, max_results: int, filter: string?) -> int {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var filter

  L1:
    load_var filter
    load_const null
    cmp_op ==
    pop_jump_if_false L2
    jump L3

  L2:
    load_var max_results
    load_const 100
    add_int
    jump L4

  L3:
    load_var max_results

  L4:
    return
}

function user.Search(query: string, max_results: int, filter: string) -> int {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const "none"
    store_var filter

  L1:
    load_var max_results
    return
}

function user.SearchDocs(query: string, max_results: int, filter: string?, chunk_size: int) -> string[] {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var filter

  L1:
    load_var chunk_size
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L2
    load_var query
    call baml.String.length
    store_var chunk_size

  L2:
    load_var query
    alloc_array 1
    return
}

function user.SearchService.Docs(self: null, query: string, filter: string?) -> string[] {
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var filter

  L0:
    load_var query
    load_const <omitted>
    load_var filter
    load_const <omitted>
    call user.SearchDocs
    return
}

function user.SearchService.Run(self: null, query: string, limit: int) -> int {
    load_var limit
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 20
    store_var limit

  L0:
    load_var query
    load_var limit
    load_var self
    load_field .base
    call user.Search
    return
}

function user.SearchService.from_json(j: baml.json.json) -> SearchService {
    load_var j
    load_const "base"
    call baml.json.field
    store_var _3
    load_type string
    load_var _3
    call baml.json.from_json
    store_var _2
    alloc_instance user.SearchService
    load_var _2
    init_field .base
    return
}

function user.SearchService.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .base
    call baml.String.to_json
    load_const "base"
    alloc_map 1
    return
}

function user.TestClient$new() -> null {
    alloc_instance baml.llm.PrimitiveClient
    load_const "TestClient"
    init_field .name
    load_const "openai"
    init_field .provider
    alloc_instance baml.llm.PrimitiveClientOptions
    load_const null
    init_field .model
    load_const null
    init_field .base_url
    load_const null
    init_field .allowed_role_metadata
    load_const null
    init_field .finish_reason_allow_list
    load_const null
    init_field .finish_reason_deny_list
    load_const null
    init_field .supports_streaming
    load_const null
    init_field .default_role
    load_const null
    init_field .allowed_roles
    load_const null
    init_field .remap_roles
    load_const null
    init_field .api_key
    load_const null
    init_field .provider_options
    load_const null
    init_field .media_url_handler
    alloc_map 0
    init_field .headers
    alloc_map 0
    init_field .query_params
    alloc_map 0
    init_field .request_body
    init_field .options
    return
}

function user.UseMixedArgs() -> int {
    load_const "dogs"
    load_const 3
    load_const "all"
    call user.Search
    return
}

function user.UseNamedDefaults() -> int {
    load_const "cats"
    load_const 5
    load_const "recent"
    call user.Search
    return
}

function user.UseOptionalDropping() -> string[] {
    load_var ?1
    make_cell
    store_var ?1
    load_global user.SearchDocs
    store_deref ?1
    load_const "cats"
    load_const "recent"
    load_var _2
    make_closure .<optional-adapter(UseOptionalDropping, 0)>, 1
    call_indirect
    return
}

function user.UseRequiredByName() -> string[] {
    load_const "birds"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call user.SearchDocs
    return
}
